idea clean and bugfix